[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Chulhee Kim",email = "chulhee.kim15@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12" 
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "pyarrow (>=18.1.0,<19.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (<2.2.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "xgboost (>=2.1.3,<3.0.0)",
    "lightgbm (>=4.5.0,<5.0.0)",
    "optuna (>=4.1.0,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "hopsworks[python] (>=4.1.4,<5.0.0)",
    "avro-python3 (>=1.10.2,<2.0.0)",
    "confluent-kafka (==2.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
